--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,8 @@
   "require": {
     "php": ">=8.1.0",
     "firebase/php-jwt": "^6.10",
-    "respect/validation": "^2.3"
+    "respect/validation": "^2.3",
+    "ph-7/php-http-response-header": "^1.0.2",
+    "ph-7/just-http-status-codes": "^1.1"
   }
 }
